# deepseek_apimonitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json  endpoints.json  package-lock.json  package.json  vite.config.js  改进清单.md
frontend/: daily.html  index.html  models.html
frontend/src/: BallView.vue  DailyView.vue  Dashboard.vue  ModelsView.vue  api.js  daily.js  main.js  models.js
plans/: 优化模型统计表格.md  悬浮球模式.md  悬浮球独立窗口.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ball.json  default.json  main.json
src-tauri/src/: api.rs  config.rs  data.rs  endpoints.rs  main.rs  token.rs
