[package]
name = "deepseek-monitor"
version = "0.1.2"
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "6"
chrono = "0.4"
# 只用 try_join! 宏做并发请求；runtime 由 tauri 提供，不需要 rt/multi-thread 等 feature。
tokio = { version = "1", default-features = false, features = ["macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
